Clean up more resources during WebGLLayer teardown https://bugs.webkit.org/show_bug.cgi?id=210222

Patch by Kenneth Russell <kbr@chromium.org> on 2020-04-13
Reviewed by Dean Jackson.

Release OpenGL resources just before destruction of the underlying
OpenGL context.

* platform/graphics/cocoa/GraphicsContextGLOpenGLCocoa.mm:
(WebCore::GraphicsContextGLOpenGL::~GraphicsContextGLOpenGL):
* platform/graphics/cocoa/WebGLLayer.h:
* platform/graphics/cocoa/WebGLLayer.mm:
(-[WebGLLayer releaseGLResources]):
(-[WebGLLayer dealloc]): Deleted.

Canonical link: https://commits.webkit.org/223345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260049 268f45cc-cd09-0410-ab3c-d52691b4dbfc